# audiotester

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  package-lock.json  package.json  playwright.config.ts
.claude/: settings.json
.claude/skills/: iem-lan-remote-desktop.md  vbmatrix-remote.md
.github/: branch-rules.md
.github/workflows/: auto-release.yml  ci.yml  deploy.yml  release.yml
crates/audiotester-core/: Cargo.toml  build.rs
crates/audiotester-core/src/: lib.rs
crates/audiotester-core/src/audio/: analyzer.rs  burst.rs  detector.rs  engine.rs  latency.rs  mod.rs  recorder.rs  signal.rs
crates/audiotester-core/src/stats/: store.rs
crates/audiotester-server/: Cargo.toml
crates/audiotester-server/src/: api.rs  lib.rs  test_server.rs  ws.rs
crates/audiotester-server/src/ui/: dashboard.rs  manifest.json  mod.rs  settings.rs
crates/audiotester-server/src/ui/components/: mod.rs  summary_bar.rs
crates/audiotester-server/src/ui/scripts/: dashboard.js  settings.js
crates/audiotester-server/src/ui/styles/: dashboard.css  settings.css
e2e/: api.spec.ts  counter-silence.spec.ts  dashboard.spec.ts  hardware-smoke.spec.ts  issues-21-25.spec.ts  issues-26-30.spec.ts  latency-timeline.spec.ts  loss-timeline.spec.ts  monitoring-flow.spec.ts  settings.spec.ts  ux-improvements.spec.ts  websocket.spec.ts
e2e/helpers/: vban-text.ts
installer/: install.ps1
src/: lib.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  lib.rs  main.rs  tray.rs
src/audio/: analyzer.rs  engine.rs  signal.rs
src/stats/: mod.rs  store.rs
src/ui/: mod.rs  stats_window.rs  tray.rs
tests/: e2e_config.rs  e2e_counter_silence.rs  e2e_dashboard.rs  e2e_issues_21_25.rs  e2e_issues_26_30.rs  e2e_latency.rs  e2e_latency_timeline.rs  e2e_loss.rs  e2e_loss_timeline.rs  e2e_reconnection.rs  e2e_signal.rs  e2e_tray.rs  e2e_tray_integration.rs  meta_tests.rs
tests/e2e/: loss_test.rs
tests/integration/: audio_loop.rs
tools/: dpc_changes_applied.ps1  dpc_restore.ps1  verify_loss.py
