[workspace]
members = [
    "crates/audiotester-core",
    "crates/audiotester-server",
    "src-tauri",
]
resolver = "2"

[package]
name = "audiotester"
version = "0.1.5"
edition = "2021"
authors = ["Audiotester Team"]
description = "Windows ASIO audio testing application for monitoring audio paths"
license = "MIT"
repository = "https://github.com/zbynekdrlik/audiotester"
keywords = ["audio", "asio", "testing", "windows", "latency"]
categories = ["multimedia::audio"]

[dependencies]
# Core library (re-exported for backward compatibility with tests)
audiotester-core = { path = "crates/audiotester-core" }

[dev-dependencies]
approx = "0.5"
tempfile = "3.14"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde_json = "1.0"

[features]
default = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 1
