[package]
name = "audiotester-core"
version = "0.1.5"
edition = "2021"
authors = ["Audiotester Team"]
description = "Core audio engine, signal processing, and statistics for audiotester"
license = "MIT"

[dependencies]
# Audio I/O with ASIO support
cpal = { version = "0.15", features = ["asio"] }

# Lock-free ring buffer for audio
ringbuf = "0.4"

# FFT for cross-correlation
rustfft = "6.2"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"

# Serialization for config
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
approx = "0.5"
tempfile = "3.14"
