[package]
name = "audiotester-server"
version = "0.1.5"
edition = "2021"
authors = ["Audiotester Team"]
description = "Axum + Leptos SSR web server for audiotester"
license = "MIT"

[dependencies]
# Core library
audiotester-core = { path = "../audiotester-core" }

# Web framework
axum = { version = "0.8", features = ["macros", "json", "ws"] }

# Leptos SSR (server-side rendering only, no WASM)
leptos = { version = "0.7", default-features = false, features = ["ssr"] }
reactive_graph = "0.1"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros", "net"] }

# Tower middleware
tower-http = { version = "0.6", features = ["fs", "cors", "set-header"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# System
local-ip-address = "0.6"

# WebSocket
futures-util = "0.3"

[[bin]]
name = "test-server"
path = "src/test_server.rs"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio-tungstenite = "0.28"
